--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "",
   "scripts": {
     "dev": "yarn lite-server public/",
-    "compile": " ./node_modules/.bin/watchify src/index.js -o public/bundle.js -t [ babelify --presets [ es2015 ] ]"
+    "compile": "./node_modules/.bin/browserify src/index.js -o public/bundle.js -t [ babelify --presets [ es2015 ] ]",
+    "compile:w": "./node_modules/.bin/watchify src/index.js -o public/bundle.js -t [ babelify --presets [ es2015 ] ]",
+    "deploy": "yarn compile && ./node_modules/.bin/surge -p ./public/ -d credfashion.surge.sh"
   },
   "devDependencies": {
     "@types/jest": "^20.0.8",
@@ -15,6 +17,7 @@
     "eslint-plugin-import": "^2.7.0",
     "jest": "^21.0.1",
     "lite-server": "^2.3.0",
+    "surge": "^0.19.0",
     "watchify": "^3.9.0"
   },
   "dependencies": {
